# thin_agent

./: Cargo.toml  README.md
src/: llama_cpp.rs  main.rs  prompts.rs
training/: finetune_data_sampels.json  finetune_data_sampels.json:Zone.Identifier  finetune_unsloth.ipynb
