[package]
name = "thin_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
encoding_rs = "0.8.35"
# load it locally  - repo from  https://github.com/utilityai/llama-cpp-rs
llama-cpp-2 = { path = "/home/alonagmon/rust/llama-cpp-rs/llama-cpp-2" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum-macros = "0.5.0"