[package]
name = "thin_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
encoding_rs = "0.8.35"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum-macros = "0.5.0"

[dependencies.llama-cpp-2]
git = "https://github.com/utilityai/llama-cpp-rs.git"
package = "llama-cpp-2"
rev = "5f4976820b54f0dcc5954f335827d31e1794ef2e"
submodules = true
